processed/jira/txt/LU/LU-6260.txt
Key:        LU-6260
Summary:    more support for 3.16 linux kernel
Link:       https://jira.whamcloud.com/browse/LU-6260
Type:       Improvement
Priority:   Minor
Status:     Resolved
Resolution: Fixed
Assignee:   Bob Glossman
Reporter:   Bob Glossman
Created:    Thu, 19 Feb 2015 20:01:01 +0000
Updated:    Fri, 15 Jan 2016 14:49:32 +0000
Resolved:   Thu, 30 Jul 2015 13:26:03 +0000
Labels:     patch
Links:      Blocker: is blocked by LU-6567; Related: is related to  LU-7382; Related: is related to  LU-6215; Related: is related to  LU-5322; Related: is related to LU-7052

--- Environment ---
3.16 kernel

--- Description ---
earlier LU-5322 was closed out to capture those kernel support fixes that landed for 2.7.0

There are still outstanding issues that we don't have fixes for yet.  Those will be done in later lustre versions, so creating this new ticket to track them.

One known issue first mentioned 15/Sep/14:

With the switch to 3.16 now seeing new build failures, even in client only builds.  example errors:

  CC [M]  /home/bogl/lustre-release/lustre/llite/llite_capa.o
  CC [M]  /home/bogl/lustre-release/lustre/llite/rw26.o
/home/bogl/lustre-release/lustre/llite/rw26.c:700:9: error: initialization from incompatible pointer type [-Werror]
         .direct_IO      = ll_direct_IO_26,
         ^
/home/bogl/lustre-release/lustre/llite/rw26.c:700:9: error: (near initialization for ‘ll_aops.direct_IO’) [-Werror]
cc1: all warnings being treated as errors
make[6]: *** [/home/bogl/lustre-release/lustre/llite/rw26.o] Error 1
make[5]: *** [/home/bogl/lustre-release/lustre/llite] Error 2
make[4]: *** [/home/bogl/lustre-release/lustre] Error 2
make[3]: *** [_module_/home/bogl/lustre-release] Error 2
make[3]: Leaving directory `/usr/src/kernels/3.16.2-200.fc20.x86_64'
make[2]: *** [modules] Error 2
make[2]: Leaving directory `/home/bogl/lustre-release'
make[1]: *** [all-recursive] Error 1
make[1]: Leaving directory `/home/bogl/lustre-release'
make: *** [all] Error 2

Recent comment in LU-5322 said this fix is still TBD.

--- Comment (pjones, Thu, 30 Jul 2015 13:26:03 +0000) ---
Great! Thanks James

--- Comment (simmonsja, Thu, 30 Jul 2015 13:24:02 +0000) ---
Yes this work is finally done.

--- Comment (pjones, Thu, 30 Jul 2015 13:11:19 +0000) ---
So is it ok to mark this ticket as resolved now?

--- Comment (gerrit, Thu, 30 Jul 2015 03:23:04 +0000) ---
Oleg Drokin (oleg.drokin@intel.com) merged in patch http://review.whamcloud.com/15028/

Subject: LU-6260 llite: add support for new iter functionality

Project: fs/lustre-release

Branch: master

Current Patch Set: 

Commit: 044503492c8e2e4cc519c34f282744d3d941a759

--- Comment (gerrit, Thu, 28 May 2015 22:13:45 +0000) ---
Oleg Drokin (oleg.drokin@intel.com) merged in patch http://review.whamcloud.com/14665/

Subject: LU-6260 llite: add support for direct IO api changes

Project: fs/lustre-release

Branch: master

Current Patch Set: 

Commit: 98883bd3e2cc48a3a5674ce140ad74bece37df05

--- Comment (gerrit, Thu, 28 May 2015 19:28:31 +0000) ---
James Simmons (uja.ornl@yahoo.com) uploaded a new patch: http://review.whamcloud.com/15028

Subject: LU-6260 llite: add support for new iter functionality

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: 302db32ec89b8a79343f01cebc309289ca6044a3

--- Comment (simmonsja, Tue, 5 May 2015 20:51:44 +0000) ---
Also in the 3.16 kernel we see the introduction of read_iter and write_iter. These later go on to replace the aio_write and aio_read functions. This change leads to the replacement of the generic_file_aio_XXX functions with the generic_file_XXX_iter functions in vvp_io.c.

--- Comment (gerrit, Mon, 4 May 2015 20:07:54 +0000) ---
James Simmons (uja.ornl@yahoo.com) uploaded a new patch: http://review.whamcloud.com/14665

Subject: LU-6260 llite: add support for direct IO api changes

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: 396f0bd17ad097a06cbac81db46461074d7d8a41

--- Comment (blakecaldwell, Thu, 16 Apr 2015 17:01:24 +0000) ---
I recently ran Lustre with ldiskfs on Linux 3.18. The changes that were necessary are part of my github repo here:

https://github.com/bacaldwell/lustre

Most of the changes were rebased upstream Linux patches, which are referenced in my commits. The specific issue mentioned in this ticket was addressed by this commit:

https://github.com/bacaldwell/lustre/commit/663d8b7b2a6e42e0fba6b587f718732b1f756bd7#diff-8684eb9ba8f6ecca0e513931aa6bcd19R369

It needs quite a bit of cleanup, but hopefully will be a useful reference for this work.
